force-app/main/default/objects/Persona__mdt/Persona__mdt.object-meta.xml
<CustomObject>
    <label>Persona</label>
    <pluralLabel>Personas</pluralLabel>
</CustomObject>