force-app/main/default/objects/Persona__mdt/fields/CardBody__c.field-meta.xml
<CustomField>
    <fullName>CardBody__c</fullName>
    <label>Card Body</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>