force-app/main/default/objects/Persona__mdt/fields/HelpLink__c.field-meta.xml
<CustomField>
    <fullName>HelpLink__c</fullName>
    <label>Help Link</label>
    <type>Url</type>
</CustomField>