force-app/main/default/objects/Persona__mdt/fields/InlineHelpText__c.field-meta.xml
<CustomField>
    <fullName>InlineHelpText__c</fullName>
    <label>Inline Help Text</label>
    <type>TextArea</type>
</CustomField>