force-app/main/default/objects/Persona__mdt/fields/IsTestData__c.field-meta.xml
<CustomField>
    <fullName>IsTestData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Data</label>
    <type>Checkbox</type>
</CustomField>