force-app/main/default/objects/Persona__mdt/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <label>Node</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
                <default>true</default>
                <label>Administration</label>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Investment Committee</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>