force-app/main/default/objects/Persona__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Node__c</columns>
    <columns>IsActive__c</columns>
    <columns>InlineHelpText__c</columns>
    <columns>HelpLink__c</columns>
    <columns>IsTestData__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>